--- a/src/assets/styles/sass/main.sass
+++ b/src/assets/styles/sass/main.sass
@@ -1,3 +1,9 @@
 @import purecss-sass/vendor/assets/stylesheets/purecss/base
 @import purecss-sass/vendor/assets/stylesheets/purecss/grids
 @import purecss-sass/vendor/assets/stylesheets/purecss/grids-responsive
+
+@import base
+@import colors
+@import fonts
+@import pages
+@import overrides
