--- a/src/templates/main.pug
+++ b/src/templates/main.pug
@@ -1,1 +1,25 @@
-div Hi
+main
+    .pure-g
+        .pure-u-1.pure-u-md-4-5.pure-u-lg-3-5.pure-u-xxl-2-5
+            .banner
+                #greet Hi,
+                #intro
+                    | This is
+                    b Sadman
+                #skills
+                    ul
+                        li Cloud
+                        li Linux
+                        li Coding
+                #contact
+                    ul
+                        li
+                            a(href="#") 
+                        li
+                            a(href="#") 
+                        li
+                            a(href="#") 
+                        li
+                            a(href="#") 
+                        li
+                            a(href="#") 
