feat: add contact links

--- a/src/templates/main.pug
+++ b/src/templates/main.pug
@@ -14,12 +14,12 @@ main
                 #contact
                     ul
                         li
-                            a(href="#") 
+                            a(href="mailto:hello@sadman.xyz" rel="noopener noreferrer nofollow" target="_blank") 
                         li
-                            a(href="#") 
+                            a(href="https://www.facebook.com/KaziSadmanAhmed" rel="noopener noreferrer nofollow" target="_blank") 
                         li
-                            a(href="#") 
+                            a(href="https://www.linkedin.com/in/KaziSadmanAhmed" rel="noopener noreferrer nofollow" target="_blank") 
                         li
-                            a(href="#") 
+                            a(href="https://github.com/KaziSadmanAhmed" rel="noopener noreferrer nofollow" target="_blank") 
                         li
-                            a(href="#") 
+                            a(href="https://gitlab.com/KaziSadmanAhmed" rel="noopener noreferrer nofollow" target="_blank") 
