update latest info

--- a/src/templates/main.pug
+++ b/src/templates/main.pug
@@ -5,7 +5,7 @@ main
                 #greet Hi,
                 #intro
                     | This is
-                    b Sadman
+                    b Muquit
                 #skills
                     ul
                         li Cloud
@@ -14,12 +14,10 @@ main
                 #contact
                     ul
                         li
-                            a(href="mailto:hello@sadman.xyz" rel="noopener noreferrer nofollow" target="_blank") 
+                            a(href="mailto:hello@muquit.xyz" rel="noopener noreferrer nofollow" target="_blank") 
                         li
-                            a(href="https://www.facebook.com/KaziSadmanAhmed" rel="noopener noreferrer nofollow" target="_blank") 
+                            a(href="https://www.linkedin.com/in/AmamDewan" rel="noopener noreferrer nofollow" target="_blank") 
                         li
-                            a(href="https://www.linkedin.com/in/KaziSadmanAhmed" rel="noopener noreferrer nofollow" target="_blank") 
+                            a(href="https://github.com/AmamDewan" rel="noopener noreferrer nofollow" target="_blank") 
                         li
-                            a(href="https://github.com/KaziSadmanAhmed" rel="noopener noreferrer nofollow" target="_blank") 
-                        li
-                            a(href="https://gitlab.com/KaziSadmanAhmed" rel="noopener noreferrer nofollow" target="_blank") 
+                            a(href="https://gitlab.com/AmamDewan" rel="noopener noreferrer nofollow" target="_blank") 
