feat: add link to blog site

--- a/src/templates/main.pug
+++ b/src/templates/main.pug
@@ -21,3 +21,5 @@ main
                             a(href="https://github.com/AmamDewan" rel="noopener noreferrer nofollow" target="_blank") 
                         li
                             a(href="https://gitlab.com/AmamDewan" rel="noopener noreferrer nofollow" target="_blank") 
+                    a(href="https://blog.muquit.xyz") Blog -->
+
