--- a/src/assets/styles/sass/_pages.sass
+++ b/src/assets/styles/sass/_pages.sass
@@ -54,6 +54,9 @@ a
 
 #contact
   font-size: 24px
+  display: flex
+  justify-content: space-between
+  align-items: center
   & > ul
     list-style: none
     padding-left: unset
